[gd_scene load_steps=8 format=3 uid="uid://pak8t28sflvo"]

[ext_resource type="Texture2D" uid="uid://fpexh6ynmrjh" path="res://levels/fish_tank/sprites/events/fish net.png" id="1_52h02"]
[ext_resource type="Script" path="res://levels/fish_tank/fish_net.gd" id="1_v7i3f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gr8vq"]
size = Vector2(183, 31)

[sub_resource type="Animation" id="Animation_ekr5e"]
resource_name = "NetFromRight"
length = 7.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.5, 1.8, 2.7, 3.2, 3.5, 4, 5, 6, 7),
"transitions": PackedFloat32Array(0.5, 1, 1, 0.5, 1, 1, 1, 1, 0.5, 1, 1),
"update": 0,
"values": [Vector2(2080, -300), Vector2(300, -300), Vector2(90, -300), Vector2(90, -300), Vector2(1500, -275), Vector2(1700, -275), Vector2(1700, -275), Vector2(1360, -130), Vector2(1040, 250), Vector2(560, 0), Vector2(560, -300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.5, 2.7, 3.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(-1, 1), Vector2(-1, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.5, 4, 5, 6, 7),
"transitions": PackedFloat32Array(1, 1, 1, 0.5, 1, 1),
"update": 0,
"values": [0.0, 0.0, -1.22173, 0.0, 1.22173, 1.5708]
}

[sub_resource type="Animation" id="Animation_7etg6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2080, -300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_3dgw8"]
resource_name = "NetFromLeft"
length = 7.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.5, 1.8, 2.7, 3.2, 3.5, 4, 5, 6, 7),
"transitions": PackedFloat32Array(0.5, 1, 1, 0.5, 1, 1, 1, 1, 0.5, 1, 1),
"update": 0,
"values": [Vector2(-160, -300), Vector2(1620, -300), Vector2(1830, -300), Vector2(1830, -300), Vector2(420, -275), Vector2(220, -275), Vector2(220, -275), Vector2(560, -130), Vector2(830, 250), Vector2(1360, 0), Vector2(1360, -300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.5, 2.7, 3.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1, 1), Vector2(-1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(-1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.5, 4, 5, 6, 7),
"transitions": PackedFloat32Array(1, 1, 1, 0.5, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.22173, 0.0, -1.22173, -1.5708]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ncix"]
_data = {
"NetFromLeft": SubResource("Animation_3dgw8"),
"NetFromRight": SubResource("Animation_ekr5e"),
"RESET": SubResource("Animation_7etg6")
}

[node name="FishNet" type="Node2D"]
position = Vector2(2080, -300)
script = ExtResource("1_v7i3f")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5708
texture = ExtResource("1_52h02")

[node name="Area2D" type="Area2D" parent="Sprite2D"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(-294.5, -106.5)
shape = SubResource("RectangleShape2D_gr8vq")

[node name="TrappedPosition" type="Node2D" parent="Sprite2D"]
position = Vector2(-288, 37)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6ncix")
}

[connection signal="body_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
